<resources>
    <string name="app_name">githubusers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">photo</string>
    <string name="user">user</string>
    <string name="id">id</string>
    <string name="html_url">html URL</string>
    <string name="user_details_email">Email : %1$s</string>
    <string name="user_details_login">Login : %1$s</string>
    <string name="user_details_date_creation">Creation date : %1$s</string>
    <string name="user_details_organization">Organization : %1$s</string>
    <string name="user_details_following">Following : %1$s</string>
    <string name="user_details_followers">Followers : %1$s</string>
    <string name="userimage">userImage</string>

</resources>