<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_item_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="#C6DBE8">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:contentDescription = "@string/photo"
        android:layout_marginLeft="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/id"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>